# rag-bruh

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  rencana.md
.github/workflows/: ci.yml  deploy.yml
app/: constant.py  dependencies.py  main.py
app/components/: chunker.py  database.py  embedder.py  generator.py  metrics.py  reranker.py  retriever.py
app/config/: configuration.py
app/monitoring/: drift.py  evaluator.py
app/pipeline/: ingestion.py  query.py
app/router/: documents.py  feedback.py  health.py  ingest.py  query.py
app/schema/: feedback.py  ingest.py  query.py
configs/: schema.sql  serve_config.yaml
core/: config.py  logger.py
docs/: README.md  architecture.md  config.md  development.md  setup.md
docs/api/: documents.md  feedback.md  health.md  ingest.md  openapi.yaml  query.md
docs/components/: chunker.md  embedder.md  generator.md  reranker.md  retriever.md
docs/pipeline/: ingestion.md  query.md
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: library-rag.json
scripts/: seed_data.py
tests/: test_chunker.py  test_embedder.py  test_generator.py  test_query_pipeline.py  test_retriever.py
