[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library-rag"
version = "0.1.0"
description = "Real-Time AI Librarian — RAG pipeline with document streaming, vector search, and LLM serving"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.9.0",
    "aiokafka>=0.10.0",
    "onnxruntime>=1.17.0",
    "fastembed>=0.3.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29.0",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "N", "RUF",
]
ignore = [
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["research/", ".venv/"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --asyncio-mode=auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app", "core"]
omit = ["*/__pycache__/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50

[tool.setuptools.packages.find]
include = ["app*", "core*"]
exclude = ["scripts*", "monitoring*", "configs*", "tests*"]
